src/style.css
/* ... */
.add-section-button{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 70px;
  height: 70px;
  border-radius: 50%;
  appearance: none;
  border: none;
  outline: none;
  background-color: var(--secondary-color-light);
  color: var(--background-light);
  font-size: 55rem;
  position: absolute;
  right: 0;
  bottom: 0;
  margin: 0px 70px 70px 0px;
  cursor: pointer;
  transition: ease-in-out, 200ms;
  z-index: 10;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

.add-section-button:hover{
  transform: rotate(90deg);
}

.section{
  padding-bottom: 50px;
}

.header-all-tasks{
  background-color: var(--secondary-color-light);
}

.header-today{
  background-color: var(--tertiary-color-light);
}

.header-week{
  background-color: var(--primary-color-light);
}

.header-important{
  background-color: var(--yellow-color);
}

.header-project{
  background-color: var(--secondary-color-light);
}

/*Media Queries*/

/* Smartphones (portrait and landscape) */
@media only screen and (max-width: 767px) {
    .body-container{
      grid-template-columns: 1fr;
      grid-template-rows: 55px repeat(11, 1fr);
    }
    .main{
      grid-area: 2 / 1 / -1 / -1;
      padding: 25px 20px 0px 20px;
  }
  #headerSection{
    grid-area: 1 / 1 / 1 / -1;
    height: auto;
  }
    .sidebar{
        position: absolute;
        z-index: 10;
        height: 100%;
        width: 70vw;
        padding-top: 60px;
        transform: translateX(-500px);
    }
    .sidebar-icon{
        display: block;
        width: 22px;
        height: 22px;
        position: absolute;
        z-index: 20;
        top: 20px;
        left: 20px;
        cursor: pointer;
    }
    #Open:checked~#sidebarMenu {
        transform: translateX(0px);
        transition: transform 350ms ease-in-out;
    }
    .btn-delete, .btn-rename{
      display: none;
    }
    .modal-body{
      padding: 17px;
    }
    .modal-header{
      font-size: 18rem;
    }
    .add-project-input{
      font-size: 15rem;
    }
    .add-project-buttons{
      font-size: 15rem;
    }
    .modal-title{
      font-size: 20rem;
    }
    #oldName{
      font-size: 20rem;
    }
    #deleteProjectName{
      font-size: 20rem;
    }
    .modal-alert{
      font-size: 14rem;
    }
    #mediaQueryHandler{
      display: none;
    }
    .tasks-list-view{
      padding: 30px 15px 0px 15px;
    }
    .delete-question{
      font-size: 15rem;
    }
    .home-heading{
      padding-bottom: 7px;
    }
    .add-section-button{
      margin: 0px 16px 16px 0px;
    }
  }
  
  /* Smartphones (portrait) */
  @media only screen and (max-width: 480px) {
    /* Your CSS styles for portrait-oriented phones go here */
  }
  
  /* Smartphones (landscape) */
  @media only screen and (min-width: 481px) and (max-width: 767px) {
    /* Your CSS styles for landscape-oriented phones go here */
  }


  /* Tablets (portrait and landscape) */
@media only screen and (min-width: 768px) and (max-width: 1023px) {
    /* Your CSS styles for tablets go here */
  }
  
  /* Tablets (portrait) */
  @media only screen and (min-width: 768px) and (max-width: 991px) {
    /* Your CSS styles for portrait-oriented tablets go here */
  }
  
  /* Tablets (landscape) */
  @media only screen and (min-width: 992px) and (max-width: 1023px) {
    /* Your CSS styles for landscape-oriented tablets go here */
  }
  

